<resources>
    <string name="app_name_kr">우타이테 플레이어</string>
    <string name="app_name">Utaite Player</string>
    <string name="no_info_song">현재 재생 중인 노래 없음</string>
    <string name="new_song_title_text">최신 우타이테</string>
    <string name="list_song_title_text">우타이테</string>
    <string name="cancel_subscription">구독 취소</string>
    <string name="privacy_policy_text">RHYA.Network의 개인정보 처리 방침을 동의하지 않았거나 개인정보 처리 방침이 업데이트되었습니다. 개인정보 처리 방침을 확인해 주세요.\n<a>https://rhya-network.kro.kr/RhyaNetwork/webpage/jsp/main/rhya_network_pp.jsp</a></string>
    <string name="view_more_text">더보기</string>
    <string name="menu_text_account_setting">계정 설정</string>
    <string name="menu_text_cash_delete">캐시 삭제</string>
    <string name="menu_text_all_reload">전체 새로고침</string>
    <string name="menu_text_all_download">전체 다운로드</string>
    <string name="menu_text_logout">로그아웃</string>
    <string name="menu_text_song_info">노래 정보</string>
    <string name="menu_text_song_delete">플레이리스트에서 삭제</string>
    <string name="menu_text_song_add_playlist">플레이리스트에 넣기</string>
    <string name="menu_text_song_reset">새로고침</string>
    <string name="webview_dialog_title">계정 정보 설정</string>
    <string name="now_play_list_dialog_title">플레이리스트</string>
    <string name="no_song_play_list">재생할 노래가 없습니다.</string>
    <string name="subscription_text">구독</string>
    <string name="insert_play_text">곡 재생</string>
    <string name="lyrics_title_text">가사</string>
    <string name="info_title_text">크레딧</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_date_title">업로드 날짜:</string>
    <string name="song_type_title">장르:</string>
    <string name="song_writer_title">작곡가:</string>
    <string name="song_singer_title">아티스트:</string>
    <string name="related_song_text">비슷한 노래</string>
    <string name="songDefTime">00:00</string>
    <string name="all_play_song_text">전체 재생</string>
    <string name="text_download">다운로드</string>
    <string name="text_search_title">나에게 맞춘 탐색</string>
    <string name="text_search_title2">탐색</string>
    <string name="text_search_input_text">검색어를 입력하세요.</string>
    <string name="text_subscribe_title">구독한 사람</string>
    <string name="top_song_title_text">Top 8 우타이테</string>
    <string name="type_song_title_text">분위기별 우타이테</string>
    <string name="default_info">기본 정보</string>
    <string name="song_count">노래 개수:</string>
    <string name="menu_text_announcement">공지사항</string>
    <string name="no_search_result">검색 결과 없음</string>
    <string name="all_view">전체보기</string>
    <string name="song">곡</string>
    <string name="singer">아티스트</string>
    <string name="song_writer">작곡가</string>
    <string name="all_view_song_title">노래 전체보기</string>
    <string name="utaite">우타이테</string>
    <string name="all_view_singer_title">아티스트 전체보기</string>
    <string name="name">이름</string>
    <string name="my_playlist_title">플레이리스트</string>
    <string name="create_playlist">플레이리스트 만들기</string>
    <string name="retry">재시도</string>
    <string name="ok">완료</string>
    <string name="playlist_title">플레이리스트 제목</string>
    <string name="image_select_title">이미지 선택</string>
    <string name="select">선택</string>
    <string name="playlist_image_select_message">플레이리스트에 들어갈 <font color='#FF4800'>이미지</font>를 선택해 주세요. 만약 선택하지 않는다면 기본 이미지가 적용됩니다. 원하는 이미지를 선택하고 <font color='#FF4800'>선택</font>버튼을 눌러주십시오.</string>
    <string name="no_playlist_title">플레이리스트 없음</string>
    <string name="edit">편집</string>
    <string name="playlist">플레이리스트</string>
    <string name="add_song">노래 추가</string>
    <string name="save">저장</string>
    <string name="close">닫기</string>
    <string name="select_cancel">선택 해제</string>
    <string name="text_request_ticket">이용권 요청</string>
    <string name="setting">설정</string>
    <string name="text_setting_resource_management">리소스 관리</string>
    <string name="text_setting_user_account_management">사용자 계정 관리</string>
    <string name="text_setting_access_check">이용권 확인</string>
    <string name="setting_alarm">알람 관리</string>
    <string name="text_notification_get">알림 수신 허용</string>
    <string name="text_notification_get_subtext">우타이테 플레이어의 전체 공지사항 수신을 허용 합니다.</string>
    <string name="network_setting">네트워크 설정 관리</string>
    <string name="text_main_activity_network_access_check">메인 화면 인터넷 연결 확인</string>
    <string name="text_network_access_check_subtext">우타이테 플레이어의 메인 화면에서의 인터넷 연결 확인 다이얼로그를 띄웁니다.</string>
    <string name="advanced_settings">고급 설정</string>
    <string name="audio_focus_setting">오디오 포커스 설정</string>
    <string name="audio_focus_setting_subtext">이 설정은 우타이테 플레이어 노래 재생 중 전화, 다른 오디오 기능을 이용하는 서비스 사용 시 재생 상태를 유지합니다.</string>
    <string name="text_licenses">라이센스</string>
    <string name="text_open_source_licenses">오픈 소스 라이센스</string>
    <string name="app_licenses">Copyright © 2022 RHYA.Network. All rights reserved.</string>
    <string name="menu_text_song_data_delete">노래 정보 제거</string>
</resources>