<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <TextView
        android:id="@+id/songSearchTitleText"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="15dp"

        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:fontFamily="@font/esamanru_medium"
        android:maxLines="1"
        android:gravity="center"
        android:text="@string/text_search_title2"
        android:textColor="@color/black"
        android:textSize="18sp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/searchLayoutShow"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/searchTextView"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginStart="15dp"

            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/text_search_input_text"
            android:textColor="@color/black"
            android:textSize="16sp"

            android:singleLine="true"
            android:ellipsize="end"

            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/searchImageView"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/searchImageView"

            android:layout_width="27dp"
            android:layout_height="27dp"

            android:layout_marginTop="20dp"

            android:contentDescription="@null"

            android:src="@drawable/ic_baseline_search_24"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"

            android:layout_height="3dp"
            android:layout_marginStart="14dp"

            android:layout_marginTop="2dp"

            android:layout_marginEnd="14dp"

            android:layout_marginBottom="10dp"

            android:background="@color/black"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchImageView" />

        <View
            android:id="@+id/viewSelector"

            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/custom_gray_5"
            android:visibility="invisible"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"

        android:minHeight="100dp"

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/songTitleTextView"
                    android:layout_width="wrap_content"

                    android:layout_height="21dp"
                    android:layout_marginStart="15dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_medium"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/song"

                    android:textColor="@color/black"

                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/allViewButtonForSong"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="15dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_light"
                    android:gravity="end"
                    android:maxLines="1"

                    android:text="@string/all_view"

                    android:textColor="@color/custom_gray_2"
                    android:textSize="12sp"

                    android:padding="8dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:minHeight="100dp">

                <TextView
                    android:id="@+id/noItemForSong"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_light"
                    android:gravity="end"
                    android:maxLines="1"

                    android:text="@string/no_search_result"
                    android:textColor="@color/custom_gray_2"

                    android:textSize="13sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/songRecyclerView"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/singerTitleTextView"
                    android:layout_width="wrap_content"

                    android:layout_height="21dp"
                    android:layout_marginStart="15dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_medium"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/singer"

                    android:textColor="@color/black"

                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/allViewButtonForSinger"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="15dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_light"
                    android:gravity="end"
                    android:maxLines="1"

                    android:text="@string/all_view"

                    android:textColor="@color/custom_gray_2"
                    android:textSize="12sp"

                    android:padding="8dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:minHeight="100dp">

                <TextView
                    android:id="@+id/noItemForSinger"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_light"
                    android:gravity="end"
                    android:maxLines="1"

                    android:text="@string/no_search_result"
                    android:textColor="@color/custom_gray_2"

                    android:textSize="13sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/singerRecyclerView"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/lyricsTitleTextView"
                    android:layout_width="wrap_content"

                    android:layout_height="21dp"
                    android:layout_marginStart="15dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_medium"
                    android:gravity="start"
                    android:maxLines="1"
                    android:text="@string/lyrics_title_text"

                    android:textColor="@color/black"

                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/allViewButtonForLyrics"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="15dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_light"
                    android:gravity="end"
                    android:maxLines="1"

                    android:text="@string/all_view"

                    android:textColor="@color/custom_gray_2"
                    android:textSize="12sp"

                    android:padding="8dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:minHeight="100dp">

                <TextView
                    android:id="@+id/noItemForLyrics"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:ellipsize="end"
                    android:fontFamily="@font/esamanru_light"
                    android:gravity="end"
                    android:maxLines="1"

                    android:text="@string/no_search_result"
                    android:textColor="@color/custom_gray_2"

                    android:textSize="13sp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/lyricsRecyclerView"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>